--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <span class="px-3 py-1 bg-red-100 text-red-700 rounded-full text-xs">Morango Fresco</span>
                             <span class="px-3 py-1 bg-red-100 text-red-700 rounded-full text-xs">Caramelo</span>
                         </div>
-                        <button onclick="openOrderModal('Morango Amor', 18.00)" class="order-btn w-full bg-gradient-to-r from-pink-500 to-rose-500 text-white py-3 px-6 rounded-lg font-semibold hover:from-pink-600 hover:to-rose-600">
+                        <button onclick="openOrderModal('Morango do Amor', 18.00)" class="order-btn w-full bg-gradient-to-r from-pink-500 to-rose-500 text-white py-3 px-6 rounded-lg font-semibold hover:from-pink-600 hover:to-rose-600">
                             🛒 Fazer Pedido
                         </button>
                     </div>
