--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             🛒 Fazer Pedido
         </button>
     </div>
-
+</div>    
               
     <!-- Contato -->
     <section class="py-20 bg-">
