--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
         </button>
     </div>
 </div>    
-              
+            </div>    
+        </div>    
+    </section>    
     <!-- Contato -->
     <section class="py-20 bg-">
         <div class="container mx-auto px-6">
