--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="p-6">
         <h3 class="font-playfair text-2xl font-bold text-gray-800 mb-3">Trufas Gourmet</h3>
         <p class="text-gray-600 mb-4 leading-relaxed">
-            Deliciosas trufas artesanais com chocolate belga premium. Disponíveis nos sabores: Ninho com uva verde, maracujá, beijinho, brigadeiro e ninho com morango.
+            Deliciosas trufas artesanais com chocolate belga premium. Disponíveis nos sabores: Ninho com uva verde, maracujá e beijinho.
         </p>
         <div class="flex items-center justify-between mb-4">
             <span class="text-2xl font-bold text-orange-600">R$ 7,00</span>
@@ -61,8 +61,6 @@
         <option value="ninho-uva-verde">Ninho com Uva Verde</option>
         <option value="maracuja">Maracujá</option>
         <option value="beijinho">Beijinho</option>
-        <option value="brigadeiro">Brigadeiro</option>
-        <option value="ninho-morango">Ninho com Morango</option>
     </select>
 
     <button onclick="openOrderModal('Trufas Gourmet - ' + document.getElementById('sabores-trufas').value, 7.00)" 
