--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </p>
             </div>
 
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2 gap-8 justify-items-center">
                 <!-- Card 1 -->
                 <!-- Card 1 -->
 <div class="card-hover bg-white rounded-2xl shadow-lg overflow-hidden border border-gray-100">
